Fix horizontal scroll bar mobile

--- a/public/styles.css
+++ b/public/styles.css
@@ -205,10 +205,10 @@ section2 {
     /* background: #23E3C9; */
 /* } */
 
-.paddingSpacing {
+/* .paddingSpacing {
     padding-right: 25px;
     padding-left: 25px;
-}
+} */
 
 .slider{
     /* margin-right: 10vh; */
@@ -962,16 +962,18 @@ section2 {
     .col-4 {
         flex-basis: 100%;;
     }
+}
 
-    .colTop {
-        min-width: 400px;
+@media only screen and (max-width: 532px) {
+    .rowTop {
+        justify-content: left ;
     }
 }
 
 @media only screen and (max-width: 800px) {
     nav ul {
       position: absolute;
-      top: 65px;
+      top: 75px;
       left: 0;
       background: #1d2129;
       width: 100%;
@@ -1021,8 +1023,8 @@ section2 {
         height: auto;
     }
     .headline2 h1 {
-        margin-bottom: 40px;
-        font-size: 50px;
+        margin-bottom: 25px;
+        font-size: 40px;
     }
 
     .mainTitle h1 {
@@ -1033,6 +1035,10 @@ section2 {
         top: 50%;
         max-width: 100vw;
         left: 40%;
+    }
+
+    .headline2 p {
+        margin-bottom: 5px;
     }
 
     #nextBtn {
@@ -1084,28 +1090,28 @@ section2 {
     }
 
     .slider3{
-        height: 550px;
+        height: 450px;
     }
     
     .slide3 img{
-        height: 550px;
+        height: 450px;
     }
 
     .slides3{
-        height: 550px;
+        height: 450px;
     }
     
     .navigation-manual3 {
-        max-height: 550px;
+        max-height: 450px;
         margin-top: -40px;
     }
     
     .navigation-auto3 {
-        max-height: 550px;
-        margin-top: 510px;
+        max-height: 450px;
+        margin-top: 410px;
     }
 
     .slider3Container {
-        height: 550px;
+        height: 450px;
     }
 }
